<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".TitleActivity"
                android:padding="10dp"
                android:id="@+id/menuLayout"
                android:background="@color/title_background_color">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title_text"
        android:textColor="@color/game_title_color"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:textSize="50sp"
        android:id="@+id/titleText"
        android:layout_marginBottom="25dp"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/blox_man_cover"
        android:layout_below="@+id/titleText"
        android:layout_centerHorizontal="true"
        android:padding="10dp"
        android:id="@+id/bloxMan"
        android:contentDescription="@string/cont_desc_blox_man"/>

    <Button
        android:id="@+id/playButton"
        android:text="@string/play_button_text"
        android:layout_below="@id/bloxMan"
        style="@style/HomeButtonStyle"
        android:textSize="40sp"
        android:layout_marginTop="25dp"/>
    <Button
        android:id="@+id/settingsButton"
        android:text="@string/setting_button_text"
        android:layout_below="@id/playButton"
        style="@style/HomeButtonStyle"/>

    <Button
        android:id="@+id/leaderButton"
        android:text="@string/store_button_text"
        android:layout_below="@id/settingsButton"
        style="@style/HomeButtonStyle"/>
</RelativeLayout>
