<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/darker_black_background_color">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:textSize="20sp"
        android:textColor="@color/text_default_color"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp"
        android:paddingBottom="10dp"
        android:id="@+id/movSettingText"
        />
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/music_text"
        android:layout_marginTop="@dimen/switch_vertical_margin"
        android:id="@+id/musicSwitch"
        style="@style/_SwitchTheme"
        android:layout_below="@+id/movSettingText"
        />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sound_fx_text"
        android:id="@+id/soundFXSwitch"
        android:layout_below="@id/musicSwitch"
        android:layout_alignRight="@id/musicSwitch"
        android:layout_alignEnd="@id/musicSwitch"
        android:layout_marginTop="@dimen/switch_vertical_margin"
        style="@style/_SwitchTheme"/>
    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tutorial_settings_text"
        android:id="@+id/tutorialSwitch"
        android:layout_below="@id/soundFXSwitch"
        android:layout_alignRight="@id/musicSwitch"
        android:layout_alignEnd="@id/musicSwitch"
        android:layout_marginTop="@dimen/switch_vertical_margin"
        style="@style/_SwitchTheme"/>

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color_blind_text"
        android:id="@+id/colorBlindSwitch"
        android:layout_below="@id/tutorialSwitch"
        android:layout_alignRight="@id/musicSwitch"
        android:layout_alignEnd="@id/musicSwitch"
        android:layout_marginTop="@dimen/switch_vertical_margin"
        style="@style/_SwitchTheme"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_home_text"
        android:id="@+id/homeButton"
        android:layout_below="@+id/colorBlindSwitch"
        android:layout_marginTop="@dimen/switch_vertical_margin"
        android:textColor="@color/text_states_dark"
        android:textSize="16sp"
        android:padding="10dp"
        android:background="@drawable/green_button"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>