<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context="com.haphazrd.movblox.UI.PlayActivity"
                android:id="@+id/playBackground"
                android:background="#333333">

    <!-- action bar -->
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:background="@color/darker_black_background_color"
        android:id="@+id/menuBar"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/menu_button"
            style="@style/HomeButtonStyle"
            android:id="@+id/playMenuButton"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            />

        <ImageView
            style="@style/LivesImageStyle"
            android:layout_toLeftOf="@id/playMenuButton"
            android:layout_toStartOf="@id/playMenuButton"
            android:contentDescription="life 1"
            android:id="@+id/bloxLifeThree"/>
        <ImageView
            style="@style/LivesImageStyle"
            android:src="@drawable/blox_man_life"
            android:layout_toLeftOf="@id/bloxLifeThree"
            android:layout_toStartOf="@id/bloxLifeThree"
            android:contentDescription="life 2"
            android:id="@+id/bloxLifeTwo"/>
        <ImageView
            style="@style/LivesImageStyle"
            android:layout_toLeftOf="@id/bloxLifeTwo"
            android:layout_toStartOf="@id/bloxLifeTwo"
            android:contentDescription="life 3"
            android:id="@+id/bloxLifeOne"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/current_level_text"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="8dp"
            android:textSize="15sp"
            android:textColor="@color/text_default_color"
            android:layout_alignParentTop="true"
            android:id="@+id/levelPlayText"
            android:layout_toStartOf="@id/bloxLifeThree"
            android:layout_toLeftOf="@id/bloxLifeThree"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_time_text"
            android:id="@+id/triesText"
            android:layout_below="@id/levelPlayText"
            android:layout_toLeftOf="@id/bloxLifeOne"
            android:layout_toStartOf="@id/bloxLifeOne"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingEnd="10dp"
            android:textSize="18sp"
            android:textColor="@color/text_default_color"
            android:layout_gravity="center_vertical|end"
            />
    </RelativeLayout>

    <!--blox holder -->
    <GridView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stretchMode="none"
        android:columnWidth="40dp"
        android:verticalSpacing="3dp"
        android:horizontalSpacing="3dp"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:listSelector="@android:color/transparent"
        android:id="@+id/gridBlox">
    </GridView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/touchCatch"
        android:background="#9b000000"
        android:contentDescription="menu transparent background"
        android:visibility="invisible"/>
    <!-- popup menu -->
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#222222"
                    android:id="@+id/menuPopout"
                    android:visibility="invisible">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/close_text"
            android:textColor="@color/text_states"
            android:background="@android:color/transparent"
            android:id="@+id/closeMenuButton"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            style="@style/TypicalButtonStyle"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restart_text"
            android:textColor="@color/text_states_dark"
            android:id="@+id/restart"
            android:background="@drawable/green_button"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            style="@style/TypicalButtonStyle"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_home_text"
            android:textColor="@color/text_states_dark"
            android:id="@+id/goHome"
            android:background="@drawable/green_button"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            style="@style/TypicalButtonStyle"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/restart"
            />
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/musicSwitch"
            android:text="@string/music_text"
            android:layout_below="@id/goHome"
            style="@style/_SwitchTheme"
            android:layout_marginTop="50dp"/>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/soundFXSwitch"
            android:text="@string/sound_fx_text"
            android:layout_below="@id/musicSwitch"
            android:layout_alignRight="@id/musicSwitch"
            android:layout_alignEnd="@id/musicSwitch"
            android:layout_marginTop="@dimen/switch_vertical_margin"
            style="@style/_SwitchTheme"/>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tutorialSwitch"
            android:text="@string/tutorial_settings_text"
            android:layout_below="@id/soundFXSwitch"
            android:layout_alignRight="@id/musicSwitch"
            android:layout_alignEnd="@id/musicSwitch"
            android:layout_marginTop="@dimen/switch_vertical_margin"
            style="@style/_SwitchTheme"/>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/color_blind_text"
            android:id="@+id/colorBlindSwitch"
            android:layout_below="@id/tutorialSwitch"
            android:layout_alignRight="@id/musicSwitch"
            android:layout_alignEnd="@id/musicSwitch"
            android:layout_marginTop="@dimen/switch_vertical_margin"
            style="@style/_SwitchTheme"/>
    </RelativeLayout>

    <!-- overlay start -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:background="#66CC66"
        android:id="@+id/playOverlay"
        android:visibility="invisible"
        >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank_level_string"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        android:layout_marginTop="150dp"
        android:textColor="@color/text_default_color"
        android:id="@+id/levelNumberOverlay"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pressToPlay"
            android:text="@string/touch_to_start_text"
            android:layout_below="@id/levelNumberOverlay"
            android:layout_marginTop="20dp"
            android:textSize="16sp"
            android:textColor="@color/text_default_color"
            android:layout_centerHorizontal="true"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/blox_man_levels"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/pressToPlay"
            android:id="@+id/bloxManOverlay"
            android:layout_marginTop="25dp"/>
    </RelativeLayout>
</RelativeLayout>
