<?xml version="1.0" encoding="utf-8"?>
<!--popout menu game over-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:id="@+id/playAgainBackground">
        <ImageView
            android:layout_width="250dp"
            android:layout_height="180dp"
            android:layout_centerInParent="true"
            android:id="@+id/popMenuBackground"
            android:background="@drawable/round_popout"/>
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="&#8212;"
            android:textColor="#ffffff"
            android:gravity="center_horizontal"
            android:layout_alignTop="@id/popMenuBackground"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_centerInParent="true"
            android:id="@+id/gameOverText"
            android:textSize="16sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lives_left_text"
            android:textColor="#FFFFCC"
            android:layout_alignTop="@id/gameOverText"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="55dp"
            android:id="@+id/livesLeftText"
            android:textSize="14sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/livesLeftText"
            android:layout_centerHorizontal="true">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/home_text"
                android:id="@+id/homePlayButton"
                android:layout_weight="1"
                style="@style/TypicalButtonStyle"
                android:textColor="@color/text_states"
                android:layout_marginTop="45dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/play_again_text"
                android:id="@+id/playAgainButton"
                style="@style/TypicalButtonStyle"
                android:textColor="@color/text_states"
                android:layout_marginTop="45dp"/>
        </LinearLayout>
    </RelativeLayout>

    <!-- won game -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:id="@+id/wonBackground">
        <ImageView
            android:layout_width="250dp"
            android:layout_height="180dp"
            android:layout_centerInParent="true"
            android:id="@+id/popWonMenuBackground"
            android:contentDescription="background"
            android:background="@drawable/round_popout"/>
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/won_game_text"
            android:textColor="#ffffff"
            android:gravity="center_horizontal"
            android:layout_alignTop="@id/popWonMenuBackground"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_centerInParent="true"
            android:id="@+id/wonGame"
            android:visibility="invisible"
            android:textSize="16sp"/>
        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressDrawable="@drawable/ratingbar_white"
            android:numStars="3"
            android:isIndicator="true"
            android:id="@+id/ratingBar"
            android:layout_alignTop="@id/wonGame"
            android:paddingTop="30dp"
            android:visibility="invisible"
            android:layout_centerHorizontal="true"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scoreText"
            android:layout_below="@id/wonGame"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:text="@string/time_bonus_text"
            android:layout_centerHorizontal="true"
            android:textColor="#ffffff"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:text="@string/select_level_text"
            android:id="@+id/levelButton"
            style="@style/TypicalButtonStyle"
            android:layout_centerHorizontal="true"
            android:textColor="@color/text_states"
            android:layout_below="@id/ratingBar"
            />
    </RelativeLayout>

    <!-- no lives -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:id="@+id/waitBackground">
        <ImageView
            android:layout_width="250dp"
            android:layout_height="180dp"
            android:layout_centerInParent="true"
            android:id="@+id/waitMenuBackground"
            android:contentDescription="background menu"
            android:background="@drawable/round_popout"/>
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/wait_text"
            android:textColor="#ffffff"
            android:gravity="center_horizontal"
            android:layout_alignTop="@id/waitMenuBackground"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_centerInParent="true"
            android:id="@+id/waitGameText"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/come_back_text"
            android:textColor="#ffffff"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:layout_alignTop="@id/waitGameText"
            android:layout_centerInParent="true"
            android:id="@+id/comeBack"
            android:textSize="14sp"/>
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/wait_time_text"
            android:textColor="#FFFFCC"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_alignTop="@id/comeBack"
            android:layout_centerInParent="true"
            android:id="@+id/timerText"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/outButtonLayout"
            android:layout_below="@id/timerText">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/go_home_text"
                android:id="@+id/waitHomeButton"
                style="@style/TypicalButtonStyle"
                android:textColor="@color/text_states"
                android:layout_weight="1"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="10dp"
                android:text="Buy Lives"
                android:id="@+id/buyLives"
                style="@style/TypicalButtonStyle"
                android:textColor="@color/text_states"
                />
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_button"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            android:text="@string/collect_lives_text"
            android:id="@+id/collectLives"
            style="@style/TypicalButtonStyle"
            android:layout_centerHorizontal="true"
            android:textColor="@color/text_states"
            android:layout_below="@id/timerText"
            />
    </RelativeLayout>

    <!-- restart game -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:id="@+id/restartBackground">
        <ImageView
            android:layout_width="250dp"
            android:layout_height="180dp"
            android:layout_centerInParent="true"
            android:id="@+id/restartMenuBackground"
            android:background="@drawable/round_popout"/>
        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/restart_warning_text"
            android:textColor="#ffffff"
            android:gravity="center_horizontal"
            android:layout_alignTop="@id/restartMenuBackground"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:layout_centerInParent="true"
            android:id="@+id/restartGameText"
            android:textSize="14sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/restartGameText"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/cancel_text"
                android:id="@+id/cancelRestartButton"
                android:layout_weight="1"
                style="@style/TypicalButtonStyle"
                android:textColor="@color/text_states"
                android:layout_marginTop="45dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round_button"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:text="@string/restart_text"
                android:id="@+id/restartButton"
                style="@style/TypicalButtonStyle"
                android:textColor="@color/text_states"
                android:layout_marginTop="45dp"/>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>