<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="150dp"
              android:background="@drawable/round_rect_shape"
              tools:context="com.haphazrd.movblox.UI.SelectLevelActivity"
              android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
              android:layout_centerVertical="true"
            android:id="@+id/levelRectangle">

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:progressDrawable="@drawable/ratingbar_white"
        android:numStars="3"
        android:isIndicator="true"
        android:id="@+id/ratingBar"
        android:layout_alignParentTop="true"
        android:paddingTop="10dp"
        android:layout_margin="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="1"
        android:textSize="50sp"
        android:id="@+id/levelNumber"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingLeft="10dp"
        android:layout_below="@+id/ratingBar"
        android:textColor="@color/text_default_color"
        android:layout_centerVertical="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bloxManLevels"
        android:src="@drawable/blox_man_levels"
        android:contentDescription="@string/cont_desc_blox_man_levels"
        android:layout_below="@+id/ratingBar"
        android:layout_marginBottom="10dp"
        android:layout_toLeftOf="@+id/playLevelButton"
        android:layout_toStartOf="@+id/playLevelButton"
        android:visibility="visible"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/playLevelButton"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/play_button_text"
        android:textColor="@color/text_states"
        android:layout_below="@+id/ratingBar"
        android:textSize="30sp"
        android:layout_marginTop="15dp"
        android:paddingLeft="10dp"
        android:paddingRight="20dp"
        android:visibility="visible"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lockedText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:text="@string/locked_text"
        android:textColor="@color/text_default_color"
        android:textSize="30sp"
        android:layout_alignParentBottom="true"
        android:paddingRight="10dp"
        android:paddingBottom="8dp"
        android:visibility="visible"
        />

</RelativeLayout>